--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#ff1565c0</color>
+    <color name="primary">#2F2F2F</color>
     <color name="primary_dark">#0d47a1</color>
     <color name="primary_accent">#448aff</color>
 
