lots of design stuff and some cue stuff

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,12 +22,33 @@
         android:showDividers="middle"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:background="@color/blue"
         android:layout_alignParentBottom="true">
         <Button
+            android:paddingRight="1dp"
+            android:paddingLeft="1dp"
             android:id="@+id/cue"
             android:layout_width="match_parent"
+            android:layout_weight="1"
             android:layout_height="100dp"
-            android:text="Set Cue Point"/>
+            android:background="@color/lightg"
+            android:text="Set Cue Point"
+            android:textColor="#ffffff"
+            android:textSize="20sp"/>
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/blue" />
+        <Button
+            android:paddingLeft="1dp"
+            android:id="@+id/stop"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="100dp"
+            android:background="@color/lightg"
+            android:text="Stop"
+            android:textColor="#ffffff"
+            android:textSize="20sp"/>
 
         </LinearLayout>
 
