--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -8,10 +8,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
         android:id="@+id/workoutTitle"
+        android:paddingLeft="20dp"
         />
 
     <ListView
+        android:layout_marginTop="-45dp"
         android:layout_below="@+id/workoutTitle"
         android:id="@+id/workoutList"
         android:layout_width="match_parent"
