--- a/app/src/main/res/layout/fragment_workouts.xml
+++ b/app/src/main/res/layout/fragment_workouts.xml
@@ -10,6 +10,8 @@
     <ListView
         android:id="@+id/workoutsList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"
+        android:divider="@color/blue"
+        android:dividerHeight="4px"></ListView>
 
 </FrameLayout>
