--- a/app/src/main/res/layout/toolbar_actionbar.xml
+++ b/app/src/main/res/layout/toolbar_actionbar.xml
@@ -6,7 +6,7 @@
         app:theme="@style/ActionBarThemeOverlay"
         app:popupTheme="@style/ActionBarPopupThemeOverlay"
         android:id="@+id/toolbar_actionbar"
-        android:background="@color/primary"
+        android:background="@color/blue"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize" />
 </merge>
