--- a/app/src/main/res/layout/workout_row_layout.xml
+++ b/app/src/main/res/layout/workout_row_layout.xml
@@ -3,18 +3,18 @@
 
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="70dp"
         android:background="@color/primary">
 
         <ImageView
             android:id="@+id/workoutThumbnail"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_margin="5dp"
             android:padding="5dp"
             android:layout_gravity="center_vertical"
             android:scaleType="fitCenter"
-            android:background="#ffeeeb42"
+            android:background="@color/primary"
             android:contentDescription="Hello"
             />
 
