--- a/app/src/main/res/layout/fragment_active_workout.xml
+++ b/app/src/main/res/layout/fragment_active_workout.xml
@@ -4,7 +4,33 @@
     tools:context="hackatbrown.com.myopersonaltrainer.ActiveWorkoutFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
+
+
+
+    <TextView
+        android:id="@+id/activeWorkoutTitle"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:textSize="40dp"
+        android:textStyle="bold"
+        android:textColor="#000000"
+        android:text="Grab a weight to start workout!" />
+
+    <TextView
+        android:id="@+id/counter"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:text="0"
+        android:gravity="center"
+        android:textSize="200dp"
+        android:layout_gravity="center"
+        android:textColor="#ffffff"
+        android:shadowColor="#ffe4e4e4"
+        android:background="@drawable/circle"
+        android:layout_marginTop="10dp"/>
 
 </FrameLayout>
